# madr

./: .dockerignore  Dockerfile  README.md  compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yml
madr/: app.py  database.py  models.py  schemas.py  security.py  settings.py
madr/routes/: auth.py  authors.py  books.py  users.py
migrations/versions/: 09c062952318_create_users_table.py  8384e208fec9_create_authors_table.py  c5540550b94b_create_books_table.py
tests/: conftest.py  test_auth.py  test_authors.py  test_books.py  test_db.py  test_schemas.py  test_security.py  test_users.py
